Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6275

wrong cleanup with LWP start.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • Lustre 2.5.0, Lustre 2.6.0
    • 3
    • 17595

      if any issues hit with processing a config to start LWP on MDT node, lsi_lwp_started don't set, so lustre_end_log will don't called.
      it's wrong in rare case on current MGC code, and completely wrong for an new MGC cleanup.
      for older code we may take an MGC lock, but failed with take a config from MGS. mgc will cancel a lock in that situation and add 'CLD'/lock to re-enqueue.
      but shutdown (cleanup) started as lustre_start_lwp failed.
      cleanup forget to call lustre_end_log as lsi_lwp_started don't set - BUT lock/cld still on enqueue list.. OOPS. next re-enqueue loop will found a cld and start enqueue and will failed on dereference for superblock as cld_stopping isn't set.

      bug looks exist for any code, but more easily hit from xyratex mgc cleanup.

            wc-triage WC Triage
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: